# idun-agent-platform

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaksignore  .mcp.json  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUG_GUIDE.md  DEV_SETUP.md  Makefile  README.md  ROADMAP.md  SECURITY.md  agent.Dockerfile.template  checkpoint.db-wal  compose.dev.yaml  docker-compose.build.yml  docker-compose.debug.yml  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  gen_api_reference.py  index.html  mkdocs.yml  mypy.ini  objects.inv  package-lock.json  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml  sitemap.xml
OLD/: agent.Dockerfile.template  backend.Dockerfile  checkpoint.db-wal  docker-compose.yml  pyproject.toml
OLD/chat-ui/: next.config.js  package.json
OLD/chat-ui/src/: types.ts
OLD/chat-ui/src/components/: Chat.tsx
OLD/idun_agent_manager/: __init__.py  main.py
OLD/idun_agent_manager/adapters/: __init__.py  base_adapter.py
OLD/idun_agent_manager/api/: __init__.py  agent_router.py  api.py
OLD/idun_agent_manager/api/endpoints/: agents.py
OLD/idun_agent_manager/db/: __init__.py  in_memory_db.py  sqlite_db.py
OLD/idun_agent_manager/models/: __init__.py  agent_models.py
OLD/idun_agent_manager/services/: __init__.py  agent_manager.py
OLD/idun_agent_manager/ui/: app.py
OLD/tests/: test_adk_agent_creation.py  test_api.py  test_langgraph_agent_creation.py  test_smol_agent_creation.py
OLD/tests/example_agents/: load_agent.py  simple_graph.py
OLD/tests/example_agents_adk/: simple_adk_agent.py
OLD/tests/example_agents_adk/multi_tool_agent/: agent.py
OLD/tests/example_agents_smol/: simple_smol_agent.py
libs/idun_agent_engine/: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  config.yaml  example_checkpoint.db-wal  pyproject.toml  pytest.ini
libs/idun_agent_engine/.github/workflows/: ci.yml
libs/idun_agent_engine/examples/: README.md
libs/idun_agent_engine/examples/01_basic_config_file/: .env.example  Dockerfile  README.md  config.yaml  example_agent.py  main.py  requirements.txt  test_config.yaml
libs/idun_agent_engine/examples/02_programmatic_config/: README.md  main.py  smart_agent.py
libs/idun_agent_engine/examples/03_minimal_setup/: README.md  config.yaml  main.py  minimal_agent.py
libs/idun_agent_engine/examples/04_haystack_example/: .env.example  agent.py  config.yaml  main.py  pipe.py
libs/idun_agent_engine/examples/05_agui_copilotkit/: README.md
libs/idun_agent_engine/examples/05_config_from_api/: main.py
libs/idun_agent_engine/examples/06_deep_research/: agent.py  config.yaml  pyproject.toml
libs/idun_agent_engine/examples/06_translation_agent/: config.yaml
libs/idun_agent_engine/examples/07_adk/: agent.py  config.yaml  main.py  pyproject.toml
libs/idun_agent_engine/examples/07_correction_agent/: config.yaml
libs/idun_agent_engine/examples/08_deep_research_agent/: config.yaml
libs/idun_agent_engine/examples/09_langgraph_mcp/: agent.py  config.yaml  math_server.py
libs/idun_agent_engine/examples/10_guardrails/: agent.py  config.yaml
libs/idun_agent_engine/src/: __init__.py  _version.py
libs/idun_agent_engine/src/agent/: __init__.py  base.py  model.py
libs/idun_agent_engine/src/agent_frameworks/: __init__.py  base_agent.py  base_agent_config.py  langgraph_agent.py  langgraph_agent_config.py
libs/idun_agent_engine/src/cli/: __init__.py
libs/idun_agent_engine/src/core/: __init__.py  app_factory.py  config_builder.py  engine_config.py  server_runner.py
libs/idun_agent_engine/src/idun_agent_engine/: __init__.py  _version.py  identity.py
libs/idun_agent_engine/src/idun_agent_engine_ui/: README.md  app.py
libs/idun_agent_engine/src/idun_platform_cli/: main.py  telemetry.py
libs/idun_agent_engine/src/observability/: __init__.py  base.py  model.py  utils.py
libs/idun_agent_engine/src/server/: dependencies.py  lifespan.py  server_config.py
libs/idun_agent_engine/src/utils/: __init__.py  validation.py
libs/idun_agent_engine/tests/: HOW_TO_TEST.md  __init__.py  conftest.py  env.test.template  test_agent.py  test_app_factory.py  test_config_builder.py  test_engine_config_with_default.py  test_lifespan.py  test_observability.py  test_observability_handlers.py  test_sanity.py  test_server_config.py  test_server_routes.py  test_server_runner.py  utils.py
libs/idun_agent_engine/tests/fixtures/: __init__.py
libs/idun_agent_engine/tests/integration/: __init__.py  conftest.py  test_a2ui_action_passthrough.py  test_a2ui_passthrough.py  test_a2ui_smoke_actions.py  test_app_lifecycle.py  test_graph_routes.py  test_integration_reload_no_leak.py  test_mock_graph.py  test_structured_input.py
libs/idun_agent_engine/tests/unit/: __init__.py  (+6 more)
libs/idun_agent_engine/web/: README.md  package.json  tailwind.config.ts
libs/idun_agent_manager/: Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  api_specification.md  docker-compose.dev.yml  env.example  pyproject.toml
libs/idun_agent_manager/alembic/: env.py  script.py.mako
libs/idun_agent_manager/tests/: __init__.py
libs/idun_agent_standalone/: CHANGELOG.md  CLAUDE.md  README.md  alembic.ini  docker-compose.example.yml  pyproject.toml  run.sh
libs/idun_agent_standalone/docker/: Dockerfile.base  Dockerfile.example  cloud-run.example.yaml
libs/idun_agent_standalone/tests/: conftest.py
libs/idun_platform_cli/: pyproject.toml
libs/idun_platform_cli/src/: main.py  serve.py
services/idun_agent_manager/: .dockerignore  AGENT_ENDPOINTS_SUMMARY.md  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.dev_test  Makefile  README.md  alembic.ini  docker-compose.dev.yml  env.example  pyproject.toml  requirements-dev.txt  test_api.py
services/idun_agent_manager/alembic/: env.py
services/idun_agent_manager/scripts/: db-reset.sh  db-upgrade.sh  db_prune_orphans.py  seed.sh
services/idun_agent_manager/tests/: __init__.py  conftest.py  test_agent_endpoints.py  test_migration_upgrade.py  test_migration_upgrade.sh
(+1896 files in other folders)
