[project]
name = "idun-agent-platform"
version = "0.1.0"
description = "Monorepo for Idun Agent Platform"
authors = [{ name = "Geoffrey HARRAZI", email = "geoffreyharrazi@gmail.com" }]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = "GPL-3.0-only"
dependencies = [
    "cryptography>=46.0.3",
    "idun-agent-engine>=0.3.8,<0.4.0",
    "idun-agent-manager",
    "idun-agent-schema>=0.3.8,<0.4.0",
    "posthog>=7.7.0",
    "setuptools>=80.9.0",
    "tokenizers<0.23",
    "transformers<4.40",
]

[dependency-groups]
dev = [
    "ruff>=0.6.5,<0.7",
    "black>=24.8.0,<25",
    "pre-commit>=3.8.0,<4",
    "mypy>=1.10.0,<2",
    "pytest>=8.3.3,<9",
    "pytest-cov>=5.0.0,<6",
    "types-PyYAML>=6.0.12.20240808,<7",
    "pyright>=1.1.404,<2",
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.5.39,<10",
    "mkdocstrings[python]>=0.26.2,<0.27",
    "mkdocs-gen-files>=0.5.0,<0.6",
    "mkdocs-autorefs>=1.2.0,<2",
    "mkdocs-include-markdown-plugin>=7.0.0,<8",
    "mkdocs-redirects>=1.2.1,<2",
    "mkdocs-section-index>=0.3.9,<0.4",
    "mkdocs-git-revision-date-localized-plugin>=1.2.6,<2",
    "torch>=2.10.0",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
package = false

[tool.uv.sources]
idun-agent-engine = { path = "libs/idun_agent_engine", editable = true }
idun-agent-manager = { path = "services/idun_agent_manager", editable = true }
idun-agent-schema = { path = "libs/idun_agent_schema", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
