[project]
name = "idun-agent-platform"
version = "0.1.0"
description = "Monorepo for Idun Agent Platform"
authors = [{ name = "Geoffrey HARRAZI", email = "geoffreyharrazi@gmail.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "GPL-3.0-only"
dependencies = [
    "cryptography>=46.0.7",
    "idun-agent-engine>=0.5.4,<0.6.0",
    "idun-agent-manager>=0.5.4,<0.6.0",
    "idun-agent-schema>=0.5.4,<0.6.0",
    "posthog>=7.13.2",
    "setuptools>=80.9.0,<83.0.0",
    "spacy-curated-transformers>=2.1.2",
    "tokenizers>=0.19",
    "transformers>=4.40,<5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12,<0.16",
    "black>=24.8.0,<27",
    "pre-commit>=3.8.0,<4",
    "mypy>=1.20.2,<2",
    "pytest>=8.3.3,<9",
    "pytest-cov>=5.0.0,<6",
    "types-PyYAML>=6.0.12.20240808,<7",
    "pyright>=1.1.409,<2",
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.7.6,<10",
    "mkdocstrings[python]>=0.30.1,<0.31",
    "mkdocs-gen-files>=0.6.1,<0.7",
    "mkdocs-autorefs>=1.2.0,<2",
    "mkdocs-include-markdown-plugin>=7.2.2,<8",
    "mkdocs-redirects>=1.2.3,<2",
    "mkdocs-section-index>=0.3.12,<0.4",
    "mkdocs-git-revision-date-localized-plugin>=1.2.6,<2",
    "torch>=2.11.0",
    "pytest-asyncio>=1.3.0",
    "typer>=0.15.0",
]

[tool.uv]
package = false

[tool.uv.sources]
idun-agent-engine = { path = "libs/idun_agent_engine", editable = true }
idun-agent-manager = { path = "services/idun_agent_manager", editable = true }
idun-agent-schema = { path = "libs/idun_agent_schema", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
