[project]
name = "idun-agent-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Geoffrey HARRAZI",email = "geoffreyharrazi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "langgraph-checkpoint-sqlite (>=2.0.10,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "streamlit (>=1.46.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "langchain-core (>=0.3.66,<0.4.0)",
    "langchain-google-vertexai (>=2.0.26,<3.0.0)",
    "google-adk (>=1.5.0,<2.0.0)",
    "ag-ui-protocol (>=0.1.8,<0.2.0)",
    "ag-ui (>=0.1.0,<0.2.0)",
    "docker (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
