[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idun-agent-standalone"
version = "0.1.0"
description = "Single-process, single-tenant Idun agent with embedded UI, admin panel, and traces viewer."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Idun Group" }]
license = { text = "GPL-3.0-only" }
dependencies = [
    "idun-agent-engine>=0.6.0,<0.7.0",
    "idun-agent-schema>=0.5.4,<0.6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "bcrypt>=4.0",
    "itsdangerous>=2.2",
    "pydantic>=2.11",
    "pydantic-settings>=2.0",
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "apscheduler>=3.10",
]

[project.scripts]
idun-standalone = "idun_agent_standalone.cli:main"

[tool.hatch.build.targets.sdist]
include = ["src/idun_agent_standalone", "alembic.ini"]

[tool.hatch.build.targets.wheel]
include = ["src/idun_agent_standalone", "alembic.ini"]

[tool.hatch.build.targets.wheel.sources]
"src/idun_agent_standalone" = "idun_agent_standalone"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
